--- a/busticket/src/main/resources/application.properties
+++ b/busticket/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.username=root
 
 # Senha do banco de dados
 spring.datasource.password=senha
+
+api.security.token.secret=${JWT_SECRET:secret}
+
+logging.file=myapp.log
